<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dominion Picker</string>
    
    <string name="picks">Your Picks!</string>
    <string name="toggle_all">Toggle All</string>
    <string name="submit">Submit</string>
    <string name="more">Need More Cards!</string>
    <string name="all_filt">All cards filtered out</string>
    
    <string name="set">Set</string>
    <string name="potion">Potion</string>
    
    <string name="settings">Settings</string>
    <string name="pref_filters">Filters</string>
    <string name="pref_filt_sets">Card Sets</string>
    
    <string name="supply_normal">Normal game</string>
    <string name="supply_colonies">Use Colonies &amp; Platinum</string>
    <string name="supply_shelters">Use Shelters</string>
    <string name="young_witch_bane">Young Witch - Bane</string>
    
    <string name="market_title">Black Market</string>
    <string name="market_draw">Draw</string>
    <string name="market_pass">Pass</string>
    <string name="market_sold_out">Sold Out!</string>
    
    <string name="demo_card_cost">1</string>
    <string name="demo_card_title">Name of the card goes here, even if it overextends</string>
    <string name="demo_card_cat">Action Reaction</string>
    <string name="demo_card_plus_1">+1</string>
    <string name="demo_card_res">, +1 buy, +1 card, +1 action</string>
    <string name="demo_card_desc">Description of the card goes here and on the next line if the space is really needed.</string>
</resources>
