<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:paddingRight="18dp"
	android:paddingLeft="12dp"
	android:paddingTop="4dp"
	android:paddingBottom="4dp" >
    
    <ImageView
        android:id="@+id/card_potion"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_potion"
        android:contentDescription="@string/potion" />
    
    <TextView
        android:text="@string/demo_card_cost"
        android:id="@+id/card_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/card_potion"
        android:layout_alignWithParentIfMissing="true"
        android:drawableRight="@drawable/ic_coin"
        android:singleLine="false"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="normal" />
    
    <TextView
        android:text="@string/demo_card_title"
        android:id="@+id/card_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="12dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/card_cost"
        android:layout_alignWithParentIfMissing="true"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary" />
    
    <ImageView
        android:id="@+id/card_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/card_title"
        android:paddingRight="6dp"
        android:src="@drawable/ic_set_base"
        android:contentDescription="@string/set" />
    
    <TextView
        android:text="@string/demo_card_cat"
        android:id="@+id/card_cat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_title"
        android:layout_toRightOf="@id/card_set"
        android:layout_alignWithParentIfMissing="true"
        android:singleLine="false"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="normal" />
    
    <RelativeLayout
        android:id="@+id/card_res_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_cat" >
        
        <TextView
            android:text="@string/demo_card_plus_1"
            android:id="@+id/card_res_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
        	android:drawableRight="@drawable/ic_coin"
            android:singleLine="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="normal" />
        
        <TextView
            android:text="@string/demo_card_plus_1"
            android:id="@+id/card_res_victory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/card_res_gold"
        	android:drawableRight="@drawable/ic_vp"
            android:singleLine="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="normal" />
        
        <TextView
            android:text="@string/demo_card_res"
            android:id="@+id/card_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/card_res_victory"
            android:singleLine="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="normal" />
    
    </RelativeLayout>
    
    <TextView
        android:text="@string/demo_card_desc"
        android:id="@+id/card_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_res_wrapper"
        android:singleLine="false"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="normal" />
        
</RelativeLayout>