<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/market_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/market_draw"
        android:onClick="drawCards" />
    
    <LinearLayout android:id="@+id/market_choices"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
        android:visibility="gone" >
        
    	<ListView android:id="@+id/card_list"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
    	
    	<Button android:id="@+id/market_pass"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/market_pass"
        	android:onClick="passPick" />
    	
    </LinearLayout>
    
    <TextView android:id="@+id/market_sold_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:text="@string/market_sold_out"
        android:gravity="center|center_vertical"
        android:textSize="18sp" />
    
</LinearLayout>
